--- a/z-http.cabal
+++ b/z-http.cabal
@@ -12,6 +12,7 @@ library
     Z.Data.HTTP.Internal
     Z.Data.HTTP.Request
     Z.Data.HTTP.Response
+    Z.Data.HTTP.Response.Parser
     Z.Data.Internal
     Z.HTTP.Client
     Z.HTTP.Internal
@@ -25,7 +26,9 @@ library
 
   default-language:   Haskell2010
   default-extensions:
+    ApplicativeDo
     ConstraintKinds
+    DerivingStrategies
     GeneralizedNewtypeDeriving
     LambdaCase
     OverloadedStrings
