--- a/z-http.cabal
+++ b/z-http.cabal
@@ -32,7 +32,7 @@ library
     GeneralizedNewtypeDeriving
     LambdaCase
     OverloadedStrings
-    PartialTypeSignatures
     PatternSynonyms
     ScopedTypeVariables
     TypeApplications
+    UnicodeSyntax
