--- a/z-http.cabal
+++ b/z-http.cabal
@@ -34,5 +34,6 @@ library
     OverloadedStrings
     PatternSynonyms
     ScopedTypeVariables
+    StandaloneKindSignatures
     TypeApplications
     UnicodeSyntax
